jEdit 5.0 version history
       (changes since jEdit 4.5)
:encoding=UTF-8:

{{{ Version 5.0pre1

Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust,
Matthieu Casanova and Jarek Czekalski for contributing to this release.

{{{ Bug fixes

- Several message boxes were not being created on the EDT which would result in
  tiny, non-resizable message boxes. (Bug #3441535, Dale Anson)

}}}
{{{ API Changes

- TextUtilities.join() now accept Collection<?> instead of Collection<String>
  (Matthieu Casanova)

- OperatingSystem.isOS2() method is removed since OS/2 cannot run jEdit since
  many years (Matthieu Casanova)

- OperatingSystem.isDOSDerived() is now deprecated since OS/2 do not exists
  anymore Windows is the only DOS derived OS, so use OperatingSystem.isWindows()
  instead (Matthieu Casanova)

}}}
{{{ Editing

- Latex Indentation a nuisance (# 3432974)

- Made it possible to disable automatic indentation by buffer or by edit
  mode, and created a status widget to toggle the setting (Evan Wright)

}}}
{{{ UI

- jEdit is now always using continuous layout in JSplitPane (Matthieu Casanova)

- Fixed keyboard handling of comboboxes in jedit's option panes.
  (Bug #3415064 - Alan Ezust)

- Changed menus to use Mac-specific symbols for accelerator keys when using
  OS X and the native look & feel (SF.net patch #1950147 - Nathan Gray)

- Added an option (on by default) to use the native Quartz renderer on
  Mac OS X (Evan Wright)

- Fixed keyboard handling of drop-down menus in File System Browser.
  (#1571578 - Alan Ezust)

- Fixed "Use textarea colors" for dockables created in non-metal L&F.
  (#1794400 - Alan Ezust)

}}}
{{{ Miscellaneous

- OS/2 tasks were removed from the Java installer as OS/2 does not
  have a working Java 6 implementation and probably never will have
  (Björn "Vampire" Kautler)

- jEdit support for keymaps (Matthieu Casanova)

- Settings directory migrated to %APPDATA%/jEdit on Windows
  (#2510763 - Alan Ezust)

}}}

}}}
